Fixed the bug when an element with an absalign class with transforms was fullscreened (like YouTube embed videos): it was misaligned. When an element is fullscreened, the browser reset some properties, like top, bottom, etc. but not the tranform one.

--- a/src/absalign.scss
+++ b/src/absalign.scss
@@ -27,6 +27,14 @@
     position: fixed;
 }
 
+#{$abs-classes},
+#{$fix-classes}
+{
+	&:fullscreen
+	{
+		transform: none;
+	}
+}
 
 
 /* -------------------------------------------------------------------------- */
